# AiDb

./: .gitignore  .implementation-notes.md  .rustfmt-guide.md  BLOOM_FILTER_COMPLETION_SUMMARY.md  BUGFIX_COMPLETION_SUMMARY.md  BUG_FIX_EMPTY_SSTABLE.md  BUG_FIX_SSTABLE_MANAGEMENT.md  BUG_FIX_WAL_CORRUPTION_TEST.md  CHANGELOG.md  CICD_SETUP_SUMMARY.md  CI_CD_OPTIMIZATION_SUMMARY.md  COMPACTION_COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DB_CORE_COMPLETION_SUMMARY.md  FLUSH_COMPLETION_SUMMARY.md  FLUSH_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_PLAN.md  INDEX.md  PROJECT_OVERVIEW.md  README.md  RENAME_SUMMARY.md  REVISED_PLAN.md  SSTABLE_COMPLETION_SUMMARY.md  TODO.md  WEEK_13_14_COMPLETION_SUMMARY.md  deny.toml  rustfmt.toml
.github/: QUICKSTART.md  SETUP.md  dependabot.yml  pull_request_template.md
benches/: read_bench.rs  write_bench.rs
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  CICD.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  DOCUMENT_STRUCTURE.md  IMPLEMENTATION.md  MEMTABLE_IMPLEMENTATION.md  PERFORMANCE_TUNING.md  SSTABLE_IMPLEMENTATION.md  USER_GUIDE.md  WAL_IMPLEMENTATION.md
examples/: README.md  basic.rs  bloom_filter_example.rs  db_example.rs  flush_example.rs  memory_script_example.rs  memtable_example.rs  script_example.rs  sstable_example.rs  tombstone_flush_example.rs  wal_example.rs  week13_14_features.rs
src/: config.rs  error.rs  iterator.rs  lib.rs  snapshot.rs  write_batch.rs
tests/: advanced_integration_tests.rs  bloom_filter_tests.rs  boundary_tests.rs  compaction_tests.rs  concurrent_tests.rs  crash_recovery_tests.rs  stress_tests.rs  (+3 more)
(+59 files in other folders)
