[package]
name = "aidb"
version = "0.1.0"
edition = "2021"
authors = ["AiDb Contributors"]
description = "A high-performance LSM-Tree based key-value storage engine written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/aidb"
keywords = ["database", "storage", "lsm-tree", "kv-store", "rocksdb"]
categories = ["database-implementations", "data-structures"]

[dependencies]
# Serialization
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

# Checksums and hashing
crc32fast = "1.4"

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-skiplist = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Compression (optional, enable via features)
snap = { version = "1.1", optional = true }
lz4 = { version = "1.24", optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Testing
tempfile = "3.8"
rand = "0.9"
proptest = "1.4"

# Benchmarking
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = ["snappy"]
snappy = ["snap"]
lz4-compression = ["lz4"]

[[bench]]
name = "write_bench"
harness = false

[[bench]]
name = "read_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
